--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,7 @@
 </head>
 <body>
   <app-root></app-root>
+  <div id="map" style="width:600px;height:600px"></div>
+    <button onClick="showExample()">Show Example</button>
 </body>
 </html>
